--- a/css/index.css
+++ b/css/index.css
@@ -22,30 +22,26 @@ src: url("../font/roboto/Roboto-Light.ttf");
   }
 }
 
-.navbarButtons{
-color: white;
-text-decoration: none;
-font-family: "robotoLight";
-font-size: 23px;
-margin-left: 2%;
+.navbar {
+  background-color: #333;
+  overflow: hidden;
 }
 
-.navbar{
-top: 70px;
-}
-
-.navbarMobile{
-  top: 60px;
-}
-
-.navbarButtonsMB{
-  color: white;
+.navbar a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  font-family: "robotoLight";
-  font-size: 16px;
-  margin-left: 3%;
-  }
+  font-size: 17px;
+}
 
-body{
-margin-top: -40px;
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #04AA6D;
+  color: white;
 }
