--- a/css/global.css
+++ b/css/global.css
@@ -7,3 +7,17 @@ body{
     margin: 0%;
     padding: 0%;
 }
+
+.mobile {
+    display: none !important;
+  }
+  
+  @media (max-width: 700px) {
+    .mobile {
+      display: inline !important;
+    }
+  
+    .desktop {
+      display: none !important;
+    }
+  }
