changed mobile view mode

--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,7 @@ body{
   
   @media (max-width: 800px) {
     .mobile {
-      display: inline !important;
+      display: block !important;
     }
   
     .desktop {
