--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,102 @@
 @font-face {
-font-family: "robotoLight";
-src: url("../font/roboto/Roboto-Light.ttf");
-}
+    font-family: "robotoLight";
+    src: url("../font/roboto/Roboto-Light.ttf");
+    }
+    
+    @font-face {
+        font-family: "roboto";
+        src: url("../font/roboto/Roboto-Medium.ttf");
+    }
+    
+    @font-face {
+        font-family: "vietnam";
+        src: url("../font/vietnamPro/BeVietnamPro-Medium.ttf");
+    }
+    
+    .centerTitle {
+        font-family: 'roboto';
+        font-size: 40px;
+        color: #6c6f77;
+        text-align: center;
+    }
+    
+    .titleSeperator {
+        width: 85vw;
+        border-top: 3px solid #6c6f77;
+        margin-top: -15px;
+        margin-bottom: 5%;
+    }
+    
+    .post {
+        filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.7));
+        border-radius: 1.5em;
+        background-color: #F9F9F9;
+        margin-left: auto;
+        margin-right: auto;
+        width: 35vw;
+    }
+    
+    .postimg {
+        width: 35vw;
+        border-top-left-radius: 1.5em 1.5em;
+        border-top-right-radius: 1.5em 1.5em;
+    }
+    
+    .posttitle {
+        font-family: 'vietnam';
+        font-size: 30px;
+        margin-top: 1.5%;
+        margin-left: 2%;
+        margin-right: 2%;
+        text-decoration: none;
+        color: black;
+    }
 
+    .postLink {
+        text-decoration: none;
+    }
+    .postDesc {
+        font-family: 'vietnam';
+        font-size: 22px;
+        margin-top: -1.5%;
+        margin-left: 2%;
+        margin-right: 2%;
+        text-decoration: none;
+        color: #aaaaaa;
+    }
+
+
+
+    .postMB {
+        filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.7));
+        border-radius: 1.5em;
+        background-color: #F9F9F9;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+    }
+    
+    .postMBimg {
+        width: 100%;
+        border-top-left-radius: 1.5em 1.5em;
+        border-top-right-radius: 1.5em 1.5em;
+    }
+    
+    .posttitleMB {
+        font-family: 'vietnam';
+        font-size: 18.75px;
+        margin-top: 2%;
+        margin-left: 4%;
+        margin-right: 4%;
+        text-decoration: none;
+        color: black;
+    }
+    .postDescMB {
+        font-family: 'vietnam';
+        font-size: 16.5px;
+        margin-top: -1.5%;
+        margin-left: 4%;
+        margin-right: 4%;
+        text-decoration: none;
+        color: #aaaaaa;
+    }
